...
                                Image(systemName: "play.circle.fill")
                            }
                        }
                        .font(.system(size: 55))
                        .foregroundColor(buttonsColor)
                    }
                    .accessibilityIdentifier("multi-play-pause")
                    .disabled(!hasAudio)
                    Spacer()

                    // Next content (step or unit)
                    Button {
                        moveToNextSection()
...
